set(
        CLP_SOURCES
        ../ArrayBackedPosIntSet.hpp
        ../dictionary_utils.cpp
        ../dictionary_utils.hpp
        ../DictionaryEntry.hpp
        ../DictionaryReader.hpp
        ../DictionaryWriter.hpp
        ../EncodedVariableInterpreter.cpp
        ../EncodedVariableInterpreter.hpp
        ../GlobalMetadataDB.hpp
        ../GlobalMetadataDBConfig.cpp
        ../GlobalMetadataDBConfig.hpp
        ../GlobalMySQLMetadataDB.cpp
        ../GlobalMySQLMetadataDB.hpp
        ../GlobalSQLiteMetadataDB.cpp
        ../GlobalSQLiteMetadataDB.hpp
        ../LogSurgeonReader.cpp
        ../LogSurgeonReader.hpp
        ../LogTypeDictionaryEntry.cpp
        ../LogTypeDictionaryEntry.hpp
        ../LogTypeDictionaryReader.hpp
        ../LogTypeDictionaryWriter.cpp
        ../LogTypeDictionaryWriter.hpp
        ../Query.cpp
        ../Query.hpp
        ../streaming_archive/ArchiveMetadata.cpp
        ../streaming_archive/ArchiveMetadata.hpp
        ../streaming_archive/Constants.hpp
        ../streaming_archive/MetadataDB.cpp
        ../streaming_archive/MetadataDB.hpp
        ../streaming_archive/reader/Archive.cpp
        ../streaming_archive/reader/Archive.hpp
        ../streaming_archive/reader/File.cpp
        ../streaming_archive/reader/File.hpp
        ../streaming_archive/reader/Message.cpp
        ../streaming_archive/reader/Message.hpp
        ../streaming_archive/reader/Segment.cpp
        ../streaming_archive/reader/Segment.hpp
        ../streaming_archive/reader/SegmentManager.cpp
        ../streaming_archive/reader/SegmentManager.hpp
        ../streaming_archive/writer/Archive.cpp
        ../streaming_archive/writer/Archive.hpp
        ../streaming_archive/writer/File.cpp
        ../streaming_archive/writer/File.hpp
        ../streaming_archive/writer/Segment.cpp
        ../streaming_archive/writer/Segment.hpp
        ../streaming_archive/writer/utils.cpp
        ../streaming_archive/writer/utils.hpp
        ../streaming_compression/Compressor.hpp
        ../streaming_compression/Constants.hpp
        ../streaming_compression/Decompressor.hpp
        ../streaming_compression/passthrough/Compressor.cpp
        ../streaming_compression/passthrough/Compressor.hpp
        ../streaming_compression/passthrough/Decompressor.cpp
        ../streaming_compression/passthrough/Decompressor.hpp
        ../streaming_compression/zstd/Compressor.cpp
        ../streaming_compression/zstd/Compressor.hpp
        ../streaming_compression/zstd/Constants.hpp
        ../streaming_compression/zstd/Decompressor.cpp
        ../streaming_compression/zstd/Decompressor.hpp
        ../Utils.cpp
        ../Utils.hpp
        ../VariableDictionaryEntry.cpp
        ../VariableDictionaryEntry.hpp
        ../VariableDictionaryReader.hpp
        ../VariableDictionaryWriter.cpp
        ../VariableDictionaryWriter.hpp
        "${PROJECT_SOURCE_DIR}/src/BufferedFileReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/BufferedFileReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/BufferReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/BufferReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/database_utils.cpp"
        "${PROJECT_SOURCE_DIR}/src/database_utils.hpp"
        "${PROJECT_SOURCE_DIR}/src/Defs.h"
        "${PROJECT_SOURCE_DIR}/src/ErrorCode.hpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/encoding_methods.cpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/encoding_methods.hpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/encoding_methods.inc"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/byteswap.hpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/decoding_methods.cpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/decoding_methods.hpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/decoding_methods.inc"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/encoding_methods.cpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/encoding_methods.hpp"
        "${PROJECT_SOURCE_DIR}/src/FileReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/FileReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/FileWriter.cpp"
        "${PROJECT_SOURCE_DIR}/src/FileWriter.hpp"
        "${PROJECT_SOURCE_DIR}/src/ir/LogEvent.hpp"
        "${PROJECT_SOURCE_DIR}/src/ir/LogEventDeserializer.cpp"
        "${PROJECT_SOURCE_DIR}/src/ir/LogEventDeserializer.hpp"
        "${PROJECT_SOURCE_DIR}/src/ir/parsing.cpp"
        "${PROJECT_SOURCE_DIR}/src/ir/parsing.hpp"
        "${PROJECT_SOURCE_DIR}/src/ir/parsing.inc"
        "${PROJECT_SOURCE_DIR}/src/ir/types.hpp"
        "${PROJECT_SOURCE_DIR}/src/ir/utils.cpp"
        "${PROJECT_SOURCE_DIR}/src/ir/utils.hpp"
        "${PROJECT_SOURCE_DIR}/src/LibarchiveFileReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/LibarchiveFileReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/LibarchiveReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/LibarchiveReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/math_utils.hpp"
        "${PROJECT_SOURCE_DIR}/src/MessageParser.cpp"
        "${PROJECT_SOURCE_DIR}/src/MessageParser.hpp"
        "${PROJECT_SOURCE_DIR}/src/MySQLDB.cpp"
        "${PROJECT_SOURCE_DIR}/src/MySQLDB.hpp"
        "${PROJECT_SOURCE_DIR}/src/MySQLParamBindings.cpp"
        "${PROJECT_SOURCE_DIR}/src/MySQLParamBindings.hpp"
        "${PROJECT_SOURCE_DIR}/src/MySQLPreparedStatement.cpp"
        "${PROJECT_SOURCE_DIR}/src/MySQLPreparedStatement.hpp"
        "${PROJECT_SOURCE_DIR}/src/PageAllocatedVector.hpp"
        "${PROJECT_SOURCE_DIR}/src/ParsedMessage.cpp"
        "${PROJECT_SOURCE_DIR}/src/ParsedMessage.hpp"
        "${PROJECT_SOURCE_DIR}/src/Platform.hpp"
        "${PROJECT_SOURCE_DIR}/src/Profiler.cpp"
        "${PROJECT_SOURCE_DIR}/src/Profiler.hpp"
        "${PROJECT_SOURCE_DIR}/src/ReaderInterface.cpp"
        "${PROJECT_SOURCE_DIR}/src/ReaderInterface.hpp"
        "${PROJECT_SOURCE_DIR}/src/spdlog_with_specializations.hpp"
        "${PROJECT_SOURCE_DIR}/src/SQLiteDB.cpp"
        "${PROJECT_SOURCE_DIR}/src/SQLiteDB.hpp"
        "${PROJECT_SOURCE_DIR}/src/SQLitePreparedStatement.cpp"
        "${PROJECT_SOURCE_DIR}/src/SQLitePreparedStatement.hpp"
        "${PROJECT_SOURCE_DIR}/src/Stopwatch.cpp"
        "${PROJECT_SOURCE_DIR}/src/Stopwatch.hpp"
        "${PROJECT_SOURCE_DIR}/src/StringReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/StringReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/TimestampPattern.cpp"
        "${PROJECT_SOURCE_DIR}/src/TimestampPattern.hpp"
        "${PROJECT_SOURCE_DIR}/src/TraceableException.hpp"
        "${PROJECT_SOURCE_DIR}/src/type_utils.hpp"
        "${PROJECT_SOURCE_DIR}/src/version.hpp"
        "${PROJECT_SOURCE_DIR}/src/WriterInterface.cpp"
        "${PROJECT_SOURCE_DIR}/src/WriterInterface.hpp"
        "${PROJECT_SOURCE_DIR}/submodules/sqlite3/sqlite3.c"
        "${PROJECT_SOURCE_DIR}/submodules/sqlite3/sqlite3.h"
        clp.cpp
        CommandLineArguments.cpp
        CommandLineArguments.hpp
        compression.cpp
        compression.hpp
        decompression.cpp
        decompression.hpp
        FileCompressor.cpp
        FileCompressor.hpp
        FileDecompressor.cpp
        FileDecompressor.hpp
        run.cpp
        run.hpp
        utils.cpp
        utils.hpp
)

add_executable(clp ${CLP_SOURCES})
target_compile_features(clp PRIVATE cxx_std_17)
target_include_directories(clp PRIVATE "${PROJECT_SOURCE_DIR}/submodules")
target_link_libraries(clp
        PRIVATE
        Boost::filesystem Boost::iostreams Boost::program_options
        fmt::fmt
        log_surgeon::log_surgeon
        spdlog::spdlog
        ${sqlite_LIBRARY_DEPENDENCIES}
        LibArchive::LibArchive
        MariaDBClient::MariaDBClient
        ${STD_FS_LIBS}
        string_utils::string_utils
        yaml-cpp::yaml-cpp
        ZStd::ZStd
)
# Put the built executable at the root of the build directory
set_target_properties(
        clp
        PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}"
)
